--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ nav a:hover {
     max-width: 750px;
     margin: 1rem auto;
 }
+.alert {
+    font-weight: bold;
+    color: red;
+}
 
 /* MAIN STYLING */
 main {
@@ -70,7 +74,7 @@ a {
 
 /* TABEL STYLING */
 table {
-    margin: 2rem 0;
+    margin: 1rem 0;
     border-collapse: collapse;
     width: 100%;
 }
@@ -86,6 +90,18 @@ td, th {
     border: 1px solid #ccc;
     text-align: left;
     padding: 8px;
+    white-space: nowrap;
+}
+
+.center {
+    text-align: center;
+}
+.edit {
+    padding: 2px;
+    border-top: 1px solid #333;
+    border-left: 1px solid #333;
+    border-bottom: 1px solid #aaa;
+    border-right: 1px solid #aaa;
 }
 
 tr:nth-child(even) {
@@ -115,6 +131,17 @@ input[type=submit] {
   border: #ccc 1px solid;
   padding: 14px 20px;
   margin: 8px 0;
+}
+
+button {
+  background-color: #eee;
+  color: black;
+  border: #ccc 1px solid;
+  padding: 7px 10px;
+  margin: 2px;
+}
+button:hover {
+  background-color: #f6f6f6;
 }
 
 input[type=submit] {
