--- a/style.css
+++ b/style.css
@@ -98,10 +98,10 @@ td, th {
 }
 .edit {
     padding: 2px;
-    border-top: 1px solid #333;
-    border-left: 1px solid #333;
-    border-bottom: 1px solid #aaa;
-    border-right: 1px solid #aaa;
+    border-top: 1px solid #444;
+    border-left: 1px solid #444;
+    border-bottom: 1px solid #999;
+    border-right: 1px solid #999;
 }
 
 tr:nth-child(even) {
